<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:src="@drawable/epbe_logo" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/app_brand_title"
        android:textColor="@color/app_text_primary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/appTagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:text="@string/app_tagline"
        android:textColor="@color/app_text_secondary"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appTagline"
        android:layout_marginTop="20dp"

        android:background="@drawable/custom_input_bg"  android:hint="Username"
        android:textColorHint="@color/app_text_secondary"
        android:textColor="@color/app_text_primary"
        android:layout_margin="10dp"
        android:padding="16dp"
        android:inputType="text"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"

        android:background="@drawable/custom_input_bg" android:hint="Password"
        android:textColorHint="@color/app_text_secondary"
        android:textColor="@color/app_text_primary"
        android:layout_margin="10dp"
        android:padding="16dp"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:singleLine="true"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"

        android:text="Login"
        android:textColor="@color/white"
        app:backgroundTint="@color/app_button"
        android:minHeight="56dp"

        app:cornerRadius="20dp"  android:layout_margin="20dp"
        android:padding="15dp" />

    <TextView
        android:id="@+id/registerNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginbtn"
        android:layout_centerHorizontal="true"
        android:text="@string/dont_have_account_register"
        android:textStyle="bold"
        android:textColor="@color/app_text_primary"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/others"
        android:layout_above="@id/socialicons"
        android:layout_marginBottom="8dp"
        android:text="@string/sign_in_with"
        android:layout_centerHorizontal="true"
        android:textColor="@color/app_text_secondary"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/socialicons"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center">


        <ImageView
            android:id="@+id/fbButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/fb"/>
        <ImageView
            android:id="@+id/linkedinButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/linkedin"/>

    </LinearLayout>


</RelativeLayout>